--- a/style.css
+++ b/style.css
@@ -5,23 +5,11 @@ nav {
   border-top: 2px solid purple;
   border-bottom: 0.7px solid black;
   background-color: whitesmoke;
-}
-ul {
-   
-  display: inline-block;
-  margin: auto;
-}
-li {
-  display: inline;
-  background-color: whitesmoke;
-  margin: 40px;
-  padding: 10px;
-  font-size: x-large;
+  justify-content: space-evenly;
+  font-size: 20px;
   font-family: cursive;
-  color:black;
-  flex: 1;
-  
 }
+
 
 .navLink{
   color: black;
@@ -39,6 +27,7 @@ img {
   margin-right: auto;
   width: 40%;
   border-radius: 50%;
+  
 }
 
 #main {
@@ -81,7 +70,7 @@ img {
 .seperator{
   width: 4px;
   background-color: rgb(172, 163, 163);
-  padding-top: 100px;
+  padding-top: 300px;
   height: 500px;
   opacity: 30%;
 }
@@ -105,14 +94,11 @@ img {
   }
   
   nav {
-      font-size: smaller;
-      padding-top: 10px;
-      padding-bottom: 10px
+      flex-direction: row;
+      width: 90%;
   }
   
-  li{
-      padding: 5px;
-  }
+ 
  
   .left {
     size-adjust: auto;  
